--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <!-- display phone search result -->
         <div class="container m-auto py-16">
-            <div id="didNotGetData">
-                
+            <div id="didNotGetData" class="hidden">
+                <h3 class="text-3xl text-center">No data available, Please search again</h3>
             </div>
             <div id="phone-container" class="grid grid-rows-2 grid-cols-3 gap-5">
 
